deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-image-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-image
  template:
    metadata:
      labels:
        app: docker-image
    spec:
      containers:
        - name: docker-image
          image: erjigit17/docker_image:latest
          ports:
            - containerPort: 8000
