deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-image-service
spec:
  type: NodePort
  selector:
    app: docker-image
  ports:
    - name: http
      port: 80
      targetPort: 8000
